# germanpensioncalculator

./: .gitignore  CLAUDE.md  README.md  README_MAIN.md  README_VISUALIZATIONS.md  calculator.py  check_data_sources.py  debug_array_issue.py  debug_growth.py  debug_leftover_pot.py  enhanced_calculator.py  historical_returns.py  lifetime.py  main.py  params.py  pyproject.toml  scenario_base.py  scenario_broker.py  scenario_enhanced_broker.py  scenario_enhanced_l3_broker.py  scenario_l3.py  scenario_l3_broker.py  scenario_rurup_broker.py  scenario_rurup_l3.py  scenario_safe_retire.py  scenario_safe_spend.py  simulation.py  test_corrections.py  test_fee_consistency.py  test_normalization.py  test_overflow_protection.py  test_reproduction.py  test_tax_logic.py  test_tax_optimization.py  test_verification.py  test_visualizations.py  visualizations.py
