[tool.poetry]
name = "germanretirementplanner"
version = "0.1.0"
description = ""
authors = ["Andrea Catalucci <a.catalucci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
