[tool.poetry]
name = "germanretirementplanner"
version = "0.1.0"
description = ""
authors = ["Andrea Catalucci <a.catalucci@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.10.0"
pandas = "^2.2.0"
pandas-datareader = "^0.10.0"
setuptools = "^69.0.0"  # Provides distutils

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
mypy = "^1.14.0"
pandas-stubs = "^2.2.0.240311"
types-setuptools = "^69.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
